Fix: collumns have no gap on mobile

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -10,7 +10,7 @@
 
 /* UTIL */
 .columns {
-	@apply md:flex md:justify-evenly md:gap-8;
+	@apply flex flex-col gap-8 md:flex-row md:justify-evenly;
 }
 
 .columns > * {
